Bug 465790 - Resizing an Aurorae-decorated window leads to malformed decorations
Summary: Resizing an Aurorae-decorated window leads to malformed decorations
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: aurorae (other bugs)
Version First Reported In: 5.27.2
Platform: Neon Linux
: VHI normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 463686 465871 466129 466369 466410 466565 466585 466645 467778 467931 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-02-15 21:28 UTC by pipapo
Modified: 2023-04-03 12:33 UTC (History)
26 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.4
Sentry Crash Report:


Attachments
Malformed window frame after resizing (49.83 KB, image/png)
2023-02-15 21:28 UTC, pipapo
Details
Composite of 3 stages of window resizing, demonstrating bug (451.38 KB, image/png)
2023-02-18 23:39 UTC, arbitar
Details
Malformed decorations in windowed mode (144.22 KB, image/png)
2023-03-13 12:49 UTC, Oleg
Details
Malformed decorations in fullscreen (211.07 KB, image/png)
2023-03-13 12:49 UTC, Oleg
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pipapo 2023-02-15 21:28:14 UTC
Created attachment 156282 [details]
Malformed window frame after resizing

Resizing a window leads to malformed window frame.

STEPS TO REPRODUCE
1. Activate window tiling (build-in or kwin-bismuth) 
2. Open an application and resize the window

OBSERVED RESULT
Malformed window frame. Sometimes even flickering. Window buttons not at the expected places.

EXPECTED RESULT
A well scaled window frame with clickable buttons. 

SOFTWARE/OS VERSIONS
Betriebssystem: KDE neon 5.27
KDE-Plasma-Version: 5.27.0
KDE-Frameworks-Version: 5.103.0
Qt-Version: 5.15.8
Kernel-Version: 5.19.0-1017-lowlatency (64-bit)
Grafik-Plattform: Wayland
Prozessoren: 4 × Intel® Core™ i7-7500U CPU @ 2.70GHz
Speicher: 31,1 GiB Arbeitsspeicher
Grafikprozessor: Mesa Intel® HD Graphics 620
Comment 1 David Edmundson 2023-02-15 22:11:28 UTC
Does this happen with the regular breeze decoration?
Comment 2 pipapo 2023-02-16 09:51:10 UTC
(In reply to David Edmundson from comment #1)
> Does this happen with the regular breeze decoration?

Very good hint! It works well with the standard breeze decoration.
Comment 3 Vlad Zahorodnii 2023-02-17 10:04:40 UTC
What decoration theme is that?
Comment 4 Vlad Zahorodnii 2023-02-17 10:06:01 UTC
*** Bug 465871 has been marked as a duplicate of this bug. ***
Comment 5 pipapo 2023-02-18 15:15:16 UTC
(In reply to Vlad Zahorodnii from comment #3)
> What decoration theme is that?

The theme was "simply circles colors". But this bug no longer appears after I switched the theme forth and back for testing. Actually I can't reproduce the bug wright now.
Comment 6 pipapo 2023-02-18 17:31:14 UTC
Very Strange. The bug is back. No reboot, no re-login. Switching back to breeze and then to simply circles colors do the trick again until you open a new window. Than the window decoration is not behave as expected.
Comment 7 arbitar 2023-02-18 23:39:12 UTC
Created attachment 156467 [details]
Composite of 3 stages of window resizing, demonstrating bug

I am also observing this behavior intermittently/unpredictably after updating to 5.27.0. Thus far, it has been triggered inconsistently and only by unlocking my session. *Sometimes* unlocking my session will trigger this on open windows. Not all windows are affected. Non-exhaustively: Dolphin, Spectacle, system settings have never been affected. Firefox (wayland mode), Konsole, Spotify, Signal desktop have all been affected at least once. If I can collect more information on how to trigger this, I will update.

Resizing the window when it is in this state appears to rescale the window decorations by a multiple of the change in window size, if that makes sense. As though (forgive my psuedo-code for the sake of expressing the idea): window_decoration_sz = window_sz * unknown_constant.

Attached (with an extremely professional "window relative scale measurement image" included) is a set of 3 images taken immediately after unlocking my system; the first is without any resizing, the second is with a small amount of resizing (1 "mm"), the third is after the same amount (1 "mm") of resizing. If I grow the window from its baseline instead of shrinking it, the decorations expand outside the right edge of the drawable area and are clipped.

Also confirming that switching themes fixes it for all windows. Closing & re-opening affected windows entirely also corrects the issue for only that window. Minimizing and restoring the window does not resolve the issue, nor does maximizing and restoring.

Operating System: Arch Linux 
KDE Plasma Version: 5.27.0
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Kernel Version: 6.1.12-zen1-1-zen (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen Threadripper 1900X 8-Core Processor
Memory: 15.6 GiB of RAM
Graphics Processor: AMD Radeon RX 580 Series

Display scale: 100%
Window decoration theme: Reactionary

I can't tell if this happens with other themes like Breeze, because it's difficult to reproduce the issue on-demand and switching themes corrects it immediately.

I will be keeping an eye on my system as this happens to determine if there's a more consistent way to reproduce this.
Comment 8 Vlad Zahorodnii 2023-02-20 10:35:53 UTC
*** Bug 466129 has been marked as a duplicate of this bug. ***
Comment 9 Bug Janitor Service 2023-02-20 16:23:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/3641
Comment 10 David Edmundson 2023-02-21 11:52:40 UTC
Git commit 01fd54d7538a1b8a9c954645142af699284d01d5 by David Edmundson.
Committed on 21/02/2023 at 11:07.
Pushed by davidedmundson into branch 'master'.

Aurorae: Add dummy window for working device pixel ratio

Aurorae uses a QQuickWindow that receives an implicit scale through the
QPA. Unfortunately there's a known quirk with device pixel ratio not
being followed when offscreen surfaces are never shown and an
independent render control is used.

Without this QQuickRenderControl::grab ends up using a buffer the size
of the window * dpr, but with the contents rendered at 1x in the corner
along with incorrect device pixel ratio information.

This patch copies a used solution from EffectQuickView. This can be
resolved more neatly with newer Qt.
Related: bug 452730

M  +13   -1    src/plugins/kdecorations/aurorae/src/aurorae.cpp
M  +1    -0    src/plugins/kdecorations/aurorae/src/aurorae.h

https://invent.kde.org/plasma/kwin/commit/01fd54d7538a1b8a9c954645142af699284d01d5
Comment 11 Vlad Zahorodnii 2023-02-21 12:22:24 UTC
Git commit 5e16c3337e266adcccce00cf698c679d5012fb48 by Vlad Zahorodnii, on behalf of David Edmundson.
Committed on 21/02/2023 at 11:55.
Pushed by vladz into branch 'Plasma/5.27'.

Aurorae: Add dummy window for working device pixel ratio

Aurorae uses a QQuickWindow that receives an implicit scale through the
QPA. Unfortunately there's a known quirk with device pixel ratio not
being followed when offscreen surfaces are never shown and an
independent render control is used.

Without this QQuickRenderControl::grab ends up using a buffer the size
of the window * dpr, but with the contents rendered at 1x in the corner
along with incorrect device pixel ratio information.

This patch copies a used solution from EffectQuickView. This can be
resolved more neatly with newer Qt.
Related: bug 452730


(cherry picked from commit 01fd54d7538a1b8a9c954645142af699284d01d5)

M  +13   -1    src/plugins/kdecorations/aurorae/src/aurorae.cpp
M  +1    -0    src/plugins/kdecorations/aurorae/src/aurorae.h

https://invent.kde.org/plasma/kwin/commit/5e16c3337e266adcccce00cf698c679d5012fb48
Comment 12 Nate Graham 2023-02-24 20:46:39 UTC
*** Bug 466369 has been marked as a duplicate of this bug. ***
Comment 13 Michał Dybczak 2023-02-25 12:46:35 UTC
I can confirm this issue on Manjaro as well. I also noticed, that it's not always after resizing in tiling mode. Sometimes I just opened a window (Krusader), resized it and got this weirdly distorted titlebars.

I assume the fix will be in 5.27.2?
Comment 14 Nate Graham 2023-02-25 17:07:43 UTC
Yep, as the "Version fixed in" field says.
Comment 15 Nate Graham 2023-02-28 20:46:43 UTC
*** Bug 466410 has been marked as a duplicate of this bug. ***
Comment 16 Nate Graham 2023-02-28 21:51:08 UTC
*** Bug 466565 has been marked as a duplicate of this bug. ***
Comment 17 Nate Graham 2023-02-28 22:02:55 UTC
*** Bug 466585 has been marked as a duplicate of this bug. ***
Comment 18 kdebugs 2023-03-01 07:06:44 UTC
Hello! I just updated to 5.27.2 and my issue, which was marked as a duplicate of this, is not fully fixed.

Screenshot: https://atvg.cc/sJNrHXaC

Operating System: Arch Linux 
KDE Plasma Version: 5.27.2
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Kernel Version: 6.2.1-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 8 × AMD Ryzen 7 4700U with Radeon Graphics
Memory: 30.7 GiB of RAM
Graphics Processor: AMD Radeon Graphics
Manufacturer: TUXEDO
Product Name: TUXEDO Aura 15 Gen1
System Version: Not Applicable
Comment 19 Nate Graham 2023-03-01 15:30:27 UTC
Well that's certainly "interesting." :/ Looks like a different issue from what was originally reported though. So perhaps the fix fixed the original issue but caused this new one?

Can anyone else reproduce that issue?
Comment 20 Lucas M 2023-03-01 16:22:12 UTC
https://i.imgur.com/iXdiJKh.png

Can confirm the issue appears for me aswell. Same as before, but the exact scaling issue seems to be slightly off? Before the fix it was a bit more aggressive if that makes sense.

Operating System: Garuda Linux 
KDE Plasma Version: 5.27.2
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Kernel Version: 6.2.1-zen1-1-zen (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 5600X 6-Core Processor
Memory: 31.3 GiB of RAM
Graphics Processor: AMD Radeon RX 6650 XT
Comment 21 Nate Graham 2023-03-01 18:17:11 UTC
I'm not able to reproduce those issues on Wayland with Plasma 5.27.2 and 200% scaling using the Layan and Dexy decoration themes with an Intel iGPU.

For people who can still reproduce the issue, can you be specific about what scaling settings, window decoration themes, and GPU you're using?
Comment 22 Lucas M 2023-03-01 20:04:11 UTC
(In reply to Nate Graham from comment #21)
> I'm not able to reproduce those issues on Wayland with Plasma 5.27.2 and
> 200% scaling using the Layan and Dexy decoration themes with an Intel iGPU.
> 
> For people who can still reproduce the issue, can you be specific about what
> scaling settings, window decoration themes, and GPU you're using?

Specs are seen in my previous post;
I'm using 100% Scaling, with the "Qogir Aurorae Theme" in the dark variant.
Comment 23 Nate Graham 2023-03-01 20:46:11 UTC
*** Bug 466645 has been marked as a duplicate of this bug. ***
Comment 24 Nate Graham 2023-03-01 20:46:42 UTC
Getting more reports of this from people using Plasma 5.27.2 where it was supposed to be fixed; re-opening.
Comment 25 kdebugs 2023-03-02 06:52:18 UTC
(In reply to Nate Graham from comment #21)
> I'm not able to reproduce those issues on Wayland with Plasma 5.27.2 and
> 200% scaling using the Layan and Dexy decoration themes with an Intel iGPU.
> 
> For people who can still reproduce the issue, can you be specific about what
> scaling settings, window decoration themes, and GPU you're using?

My Scaling is at 100%, my window decoration theme is "Sweet Mars" by "eliverlara". My Graphics chip is the "AMD Radeon RX Vega 7" which is integrated into the "AMD Ryzen 7 4700U" CPU.
Comment 26 punk.salt6165 2023-03-02 07:08:00 UTC
(In reply to Nate Graham from comment #21)
> I'm not able to reproduce those issues on Wayland with Plasma 5.27.2 and
> 200% scaling using the Layan and Dexy decoration themes with an Intel iGPU.
> 
> For people who can still reproduce the issue, can you be specific about what
> scaling settings, window decoration themes, and GPU you're using?

I'm on 100% scaling, using Dexy window decoration theme, with Amd 6900 xt gpu.
Comment 27 Michael 2023-03-02 17:31:23 UTC
I have the same issue with the arc-kde theme, 100% scaling (1920x1080) and a multi monitor setup

Operating System: Gentoo Linux 
KDE Plasma Version: 5.27.2
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Kernel Version: 6.2.0-zen1 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 1800X Eight-Core Processor
Memory: 31.3 GiB of RAM
Graphics Processor: AMD Radeon Vega Frontier Edition
Comment 28 Miren Radia 2023-03-03 13:24:09 UTC
I can reproduce this problem on my multi-monitor setup (1x 2256x1504 laptop screen + 1x 3840x2160 external monitor both at 100% scaling) using the WhiteSur-dark theme (https://github.com/vinceliuice/WhiteSur-kde). It seems to happen mostly when I move windows from one monitor to the other (or I disconnect the external monitor). My setup is as follows:

Operating System: Fedora Linux 37
KDE Plasma Version: 5.27.2
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Kernel Version: 6.1.14-200.fc37.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 16 × 12th Gen Intel® Core™ i7-1260P
Memory: 31.1 GiB of RAM
Graphics Processor: Mesa Intel® Graphics
Manufacturer: Framework
Product Name: Laptop (12th Gen Intel Core)
System Version: A6
Comment 29 arbitar 2023-03-04 05:02:43 UTC
(In reply to Nate Graham from comment #21)
> For people who can still reproduce the issue, can you be specific about what
> scaling settings, window decoration themes, and GPU you're using?

Definitely still happening for me.
Scaling settings: 100% on 3840x2160 60Hz display
Window decoration theme: Reactionary (https://store.kde.org/p/1252059)
GPU: RX 580 (Ellesmere 1002:67df) /w amdgpu on Wayland
Comment 30 Michał Dybczak 2023-03-04 21:00:15 UTC
I just noticed the same bug on 5.27.2 when I resized VLC window in single monitor setup in Wayland. The same visual effect as previously, so the bug is not squashed yet.
Hybrid graphic with GTX 970 M

Operating System: Manjaro Linux 
KDE Plasma Version: 5.27.2
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Kernel Version: 6.2.1-2-MANJARO (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i7-6700HQ CPU @ 2.60GHz
Memory: 7.6 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 530
Manufacturer: Alienware
Product Name: Alienware 17 R3
System Version: 1.13.1
Comment 31 Michał Dybczak 2023-03-05 20:03:05 UTC
To add more details to me previous comment:

No scaling (100%)
Aurorae: WhiteSur Dark

The issue happens more likely on Qt apps, like Konsole. You need to adjust the width of a window to trigger it. This time, I got even a new effect: the titlebar was expanding down, and the graphics was expanding along the way, which is looked as if it was melting.... Quite trippy...
Once I closed the Konsole from the dock (I couldn't interact with the enormously extended buttons) and launched it again, it was immune to that glitch. Maybe all apps became immune, because I couldn't trigger it anymore. Non-qt apps like Firefox also can get it, but it happens rarely.
Comment 32 punk.salt6165 2023-03-06 07:17:31 UTC
Non-qt apps like Firefox also can get it, but it happens rarely.(In reply to Michał Dybczak from comment #31)
> To add more details to me previous comment:
> 
> Maybe all apps became immune, because I couldn't trigger it anymore.
> Non-qt apps like Firefox also can get it, but it happens rarely.

This is the opposite of what I'm experiencing. Once the memory has been corrupted, new windows of the same app starts out as normal but easily becomes corrupted after a few minimize and move / resize events. 

Also for me what's inside the windows doesn't seem to matter. Firefox, kitty, obs studio, everything can get bugged. 

I think this just means it's very random. Random memory gets corrupted and that's why we experience different results.
Comment 33 Nate Graham 2023-03-06 15:48:41 UTC
Still cannot reproduce with either single or multi-screen arrangements with any Aurorae theme, or when moving windows between screens or disconnecting one of them. :/
Comment 34 Miren Radia 2023-03-06 15:56:01 UTC
I should have added that it happens for me sometimes when I move windows between my 2 monitors (1x 2256x1504 laptop screen + 1x 3840x2160 external monitor both at 100% scaling) *after* they have been quick-tiled (e.g. to the right of the screen). However, it definitely isn't consistent.
Comment 35 GolDNenex 2023-03-11 23:25:29 UTC
Since 5.27 I'm impacted by this bug. I'm not really sure what trigger it. This bug  also happen to a window that has just been opened.

Operating System: EndeavourOS 
KDE Plasma Version: 5.27.2
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Kernel Version: 6.2.2-zen2-1-zen (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i7-3820 CPU @ 3.60GHz
Memory: 15,5 GiB of RAM
Graphics Processor: AMD Radeon RX 6700 XT
Comment 36 Oleg 2023-03-13 12:49:03 UTC
Created attachment 157232 [details]
Malformed decorations in windowed mode
Comment 37 Oleg 2023-03-13 12:49:56 UTC
Created attachment 157233 [details]
Malformed decorations in fullscreen

Can confirm this issue with default Windows theme
Comment 38 David 2023-03-13 15:04:59 UTC
I encounter this issue every time I attempt to open submenus in various applications such as Firefox, Steam, Wine, and VSCodium.

Resolution: 2880x1620@200%
Operating System: Arch Linux 
KDE Plasma Version: 5.27.2
KDE Frameworks Version: 5.104.0
Qt Version: 5.15.8
Kernel Version: 6.2.5-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 5800H with Radeon Graphics
Graphics Processor: AMD Radeon Graphics
Comment 39 David 2023-03-13 15:06:56 UTC
Wine apps*
Comment 40 user151516 2023-03-14 18:38:14 UTC
I encounter this bug while using the Ant-Dark theme on 5.27.3

Operating System: Arch Linux 
KDE Plasma Version: 5.27.3
KDE Frameworks Version: 5.104.0
Qt Version: 5.15.8
Kernel Version: 6.2.6-arch1-1 (64-bit)
Graphics Platform: Wayland
Comment 41 K Freed 2023-03-15 08:09:53 UTC
Was not fixed in 5.27.2
Comment 42 Vlad Zahorodnii 2023-03-17 09:08:42 UTC
Please don't post "me too" comments unless you have valuable information that can help us with reproducing and fixing this bug.
Comment 43 Michael 2023-03-17 13:38:41 UTC
(In reply to Michael from comment #27)
> I have the same issue with the arc-kde theme, 100% scaling (1920x1080) and a
> multi monitor setup
> 
> Operating System: Gentoo Linux 
> KDE Plasma Version: 5.27.2
> KDE Frameworks Version: 5.103.0
> Qt Version: 5.15.8
> Kernel Version: 6.2.0-zen1 (64-bit)
> Graphics Platform: Wayland
> Processors: 16 × AMD Ryzen 7 1800X Eight-Core Processor
> Memory: 31.3 GiB of RAM
> Graphics Processor: AMD Radeon Vega Frontier Edition

KDE Frameworks Version: 5.104.0
KDE Plasma Version: 5.27.3

Window Border size: Tiny (not arc-kde's default, it that makes a difference)

I got Konsole in a state where resizing the window resizes the window decoration in a 1:1 way (x & y axis),
this is new behavior for me as normally the decoration is only malformed but stays fixed even when resizing.
I'm unable to create a video of it but attached are a few screenshots to illustrate the behavior:
https://imgur.com/a/fukrBgt
Comment 44 inky1003 2023-03-19 19:10:46 UTC
Also happening with other decorations.
KDE Plasma 5.27.3
Arch Linux
GPU: NVIDIA GTX 1050
Comment 45 Ahmed 2023-03-19 22:20:21 UTC
I have the same issue when using Wayland.

Kubuntu 22.10
KDE Plasma 5.27.3
KDE Frameworks version: 5.104.0
QT version: 5.15.6
Global theme: Adapta
Global scale: 100% (first monitor), and 150% (second monitor)
CPU: Intel® Core™ i5-4200M CPU
iGPU: Mesa Intel® HD Graphics 4600
Kernel version: 6.2.6-1-liquorix-amd64 (64-bit)

The issue happens randomly with applications like: Konsole, VSCodium, Discover, and Joplin.

I have also noticed that the buttons of the window are invisible, but can be clicked to minimize, maximize, and close the window.
Comment 46 Henning 2023-03-20 10:13:23 UTC
For me, Willow-dark works now!

Operating System: Fedora Linux 37
KDE Plasma Version: 5.27.3
KDE Frameworks Version: 5.104.0
Qt Version: 5.15.8
Comment 47 David Edmundson 2023-03-20 13:16:24 UTC
*** Bug 463686 has been marked as a duplicate of this bug. ***
Comment 48 Gordan Vrbanec 2023-03-21 02:27:33 UTC
Same thing happens on my system with "Rounded Dark" window decorations when using Wayland.
Haven't tried other ones though...

Kernel: 6.2.7-arch1-1
KDE Plasma Version: 5.27.3
KDE Frameworks Version: 5.104.0
Qt version: 5.15.8

AMD Ryzen 5 5600g APU
Comment 49 David Edmundson 2023-03-21 16:43:21 UTC
Git commit 82b2fa37c2408bd86011376fddfe225d3fc5a1cd by David Edmundson.
Committed on 21/03/2023 at 15:43.
Pushed by davidedmundson into branch 'master'.

Avoid accidental creation of backing stores for offscreen surfaces

Aurorae decorations and several effects are powered by QQuickWindows
that render into offscreen surfaces.

Iterating through all windows and then calling winId() will create a
platform window including for our Aurorae decorations.

Not only is this wasteful but it caused an issue with resizing windows.
QWindow code updates the internal state directly if there's no
underlying platform window, if there is it delegates responsiblity to
the backend. Our own QPA didn't update geometry whilst hidden.

The result of that is Aurorae decorations "randomly" stop resizing
correctly as the contentItem stops resizing to the window size.

M  +1    -1    src/plugins/windowsystem/windoweffects.cpp
M  +1    -1    src/plugins/windowsystem/windowsystem.cpp
M  +1    -1    src/unmanaged.cpp

https://invent.kde.org/plasma/kwin/commit/82b2fa37c2408bd86011376fddfe225d3fc5a1cd
Comment 50 Vlad Zahorodnii 2023-03-22 08:21:35 UTC
Git commit 715f4147fec2734a0ed56f7ae799e678e18f451f by Vlad Zahorodnii, on behalf of David Edmundson.
Committed on 22/03/2023 at 08:04.
Pushed by vladz into branch 'Plasma/5.27'.

Avoid accidental creation of backing stores for offscreen surfaces

Aurorae decorations and several effects are powered by QQuickWindows
that render into offscreen surfaces.

Iterating through all windows and then calling winId() will create a
platform window including for our Aurorae decorations.

Not only is this wasteful but it caused an issue with resizing windows.
QWindow code updates the internal state directly if there's no
underlying platform window, if there is it delegates responsiblity to
the backend. Our own QPA didn't update geometry whilst hidden.

The result of that is Aurorae decorations "randomly" stop resizing
correctly as the contentItem stops resizing to the window size.
(cherry picked from commit 82b2fa37c2408bd86011376fddfe225d3fc5a1cd)

M  +1    -1    src/plugins/windowsystem/windoweffects.cpp
M  +1    -1    src/plugins/windowsystem/windowsystem.cpp
M  +1    -1    src/unmanaged.cpp

https://invent.kde.org/plasma/kwin/commit/715f4147fec2734a0ed56f7ae799e678e18f451f
Comment 51 Michael 2023-03-22 09:25:11 UTC
Just to confirm, https://invent.kde.org/plasma/kwin/commit/715f4147fec2734a0ed56f7ae799e678e18f451f on top of kwin-5.27.3 fixed the issue on my side. Thanks a lot
Comment 52 K Freed 2023-03-29 12:31:17 UTC
Kwin 5.27.3 --> Still broken using ARC OSX on KDE
Comment 53 Katalin Rebhan 2023-03-29 12:36:44 UTC
(In reply to K Freed from comment #52)
> Kwin 5.27.3 --> Still broken using ARC OSX on KDE

Yes, it's fixed in 5.27.4 (see the "Version Fixed In" field).
Comment 54 David Edmundson 2023-03-31 10:29:46 UTC
*** Bug 467931 has been marked as a duplicate of this bug. ***
Comment 55 David Edmundson 2023-04-03 12:06:52 UTC
*** Bug 467778 has been marked as a duplicate of this bug. ***