src/plugins/windowsystem/windoweffects.cpp
@@ -31,7 +31,7 @@ QWindow *findWindow(WId win)
 {
     const auto windows = qApp->allWindows();
     auto it = std::find_if(windows.begin(), windows.end(), [win](QWindow *w) {
-        return w->winId() == win;
+        return w->handle() && w->winId() == win;
     });
     if (it == windows.end()) {
         return nullptr;
